devops/otel-signoz-fastapi/configs/signoz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: signoz-frontend
            port:
              number: 3301
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz-otel-collector
            port:
              number: 4318
